# mini-golang-compiler

./: .gitignore  CMakeLists.txt  README.md  parser.y  scanner.l
lib/: driver.h  scanner.h  statement.h  tools.h  var_type.h
src/: driver.cpp  main.cpp  statement.cpp  tools.cpp  var_type.cpp
test_codes/: a.in
